codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__runtime_context_idle_and_active_styles.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "frames.join(\"\\n\\n\")"
---
idle standard
text:       ╰──────────────────gpt-5.6-terra─medium╯
dimmed:                        ^^^^^^^^^^^^^ ^^^^^^
red:         <none>
background:  <none>

idle fast
text:       ╰─────────────gpt-5.6-terra─medium─fast╯
dimmed:                   ^^^^^^^^^^^^^ ^^^^^^
red:                                            ^^^^
background:                                     ^^^^

active standard
text:       ╰───────────────gpt-5.6-terra─medium─5s╯
dimmed:                     ^^^^^^^^^^^^^ ^^^^^^ ^^
red:         <none>
background:                                       ^^

active fast
text:       ╰──────────gpt-5.6-terra─medium─fast─5s╯
dimmed:                ^^^^^^^^^^^^^ ^^^^^^      ^^
red:                                         ^^^^
background:                                  ^^^^ ^^
