codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__session_name_renders_with_session_name_color.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"text:               {text}\\nsession_name_color: {session_name_color_cells}\")"
---
text:               ───────────────────────Roadmap cleanup──
session_name_color:                        ^^^^^^^^^^^^^^^
