codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__session_name_renders_with_statusline_accent.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"text:       {text}\\nstatusline: {statusline}\")"
---
text:                              Roadmap cleanup
statusline:                        ^^^^^^^^^^^^^^^
